src/test/ui/impl-trait/fallback_inference.stderr
error[E0282]: type annotations needed
  --> $DIR/fallback_inference.rs:3:27
   |
LL | fn weird() -> PhantomData<impl Sized> {
   |                           ^^^^^^^^^^ cannot infer type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
